lib_LTLIBRARIES = libgplotter-core.la

libgplotter_core_la_SOURCES = \
      gp-context.c \
      gp-function.c \
      gp-native-function.c \
      gp-variable.c \
      gp-repl.c \
      native.c \
      core.c \
      stack.c

libgplotter_core_la_CFLAGS = -g $(GOBJECT_CFLAGS)
# libgplotter_core_la_LIBADD = $(GOBJECT_LIBS) -lm
